--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "license": "MIT",
   "scripts": {
-    "server": "node app.js"
+    "server": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2"
